--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 
 cookies.domain=localhost
+
+domainRoot=http://localhost:3000
+
+spring.security.filter.order=15
+
+jwt.secret = ${JWT_SECRET}
+
+jwt.expiration = ${JWT_EXPIRATION}
