--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -3,8 +3,11 @@ spring.datasource.username=${ROOT}
 spring.datasource.password=${PASS}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto = create-drop
 
-spring.jpa.hibernate.ddl-auto = update
+logging.level.org.hibernate.SQL = debug
 
 
 cookies.domain=localhost
